samples/_failures_safe/1761248065_55c347_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f29a8e7.c: In function ‘main’:
./samples/SAFE/__tmp_5f29a8e7.c:135:13: error: expected declaration or statement at end of input
  135 |             char level[10];
      |             ^~~~
./samples/SAFE/__tmp_5f29a8e7.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f29a8e7.c:135:13: error: expected declaration or statement at end of input
